--- a/src/konnekt/resources/example.config.properties
+++ b/src/konnekt/resources/example.config.properties
@@ -1,6 +1,6 @@
 # Example Database configuration
 DB_HOST=localhost
 DB_PORT=3306
-DB_NAME=your_database_name
-DB_USER=your_username
-DB_PASS=your_password
+DB_NAME=konnekt
+DB_USER=root
+DB_PASS=password
