--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,12 +35,16 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Konnekt
 endorsed.classpath=
 excludes=
+file.reference.jakarta.activation-1.2.1.jar=lib\\jakarta.activation-1.2.1.jar
+file.reference.jakarta.mail-2.0.1.jar=lib\\jakarta.mail-2.0.1.jar
 file.reference.mysql-connector-j-9.5.0.jar=lib\\mysql-connector-j-9.5.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-j-9.5.0.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.jakarta.mail-2.0.1.jar}:\
+    ${file.reference.jakarta.activation-1.2.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
