--- a/src/konnekt/resources/example.config.properties
+++ b/src/konnekt/resources/example.config.properties
@@ -4,3 +4,7 @@ DB_PORT=3306
 DB_NAME=your_database_name
 DB_USER=your_username
 DB_PASSWORD=your_password
+
+# Example email configuration
+EMAIL_ADDRESS=your_email_address
+EMAIL_APP_PASSWORD=your_email_app_password
